# gambling-simulator

./: .gitignore  Cargo.toml  README.md  flake.nix  run-batch.sh
examples/: common.rs  ek-diagram.rs  monte-carlo-diffusion.rs  monte-carlo-mobility.rs  monte-carlo-statistics.rs  monte-carlo-trace-flight.rs  monte-carlo-transient-statistics.rs  poisson.rs  poisson2.rs  poisson_schottky.rs  scattering-collisions.rs  scattering-rates.rs
src/: consts.rs  histogram.rs  lib.rs  semiconductor.rs  units.rs
