[package]
name = "gambling-simulator"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
plotly = { version = "0.14.0", features = ["plotly_embed_js", "plotly_image"] }
build_html = "2.7.0"
tqdm = "0.8.0"
num_cpus = "1.17.0"
oklab = "1.1.2"
indicatif = "0.18.4"
rustfft = "6.4.1"
num-complex = "0.4.6"
clap = { version = "4.6", features = ["derive"] }

[dependencies]
atomic_float = "1.1.0"
errorfunctions = "0.2.0"
npyz = "0.8.4"
rand = "0.9.2"
rand_chacha = "0.9.0"
rand_distr = "0.5.1"
